--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ TRANSFER_TOKEN_SALT=qdsp1thWOedGXd7IyO2DCw==
 JWT_SECRET=JWyzo265bXE9PIlJ9/AoxA==
 
 
-NODE_ENV=production
+# NODE_ENV=production
 
 
 
@@ -16,3 +16,16 @@ DATABASE_URL=postgresql://doadmin:AVNS_m_0x-EJg9WMPlpsE_Tq@db-postgresql-blr1-67
 DATABASE_CA=${db-postgresql-blr1-05976.CA_CERT}
 
 
+# DO_SPACE_ACCESS_KEY=DO00946AVR6U9J7DH3LM
+# DO_SPACE_SECRET_KEY=cPG1GQqGp74kcRHsrym778vNCH2UXagqtmPEVnKFlR0
+# DO_SPACE_ENDPOINT=https://selectstorestorge.nyc3.digitaloceanspaces.com
+# DO_SPACE_BUCKET=selectstorestorge
+# DO_SPACE_DIRECTORY=images
+# DO_SPACE_CDN=https://selectstorestorge.nyc3.cdn.digitaloceanspaces.com
+
+
+
+AWS_ACCESS_KEY_ID=AKIA5MST5TYWHOS2YJDN
+AWS_ACCESS_SECRET=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
+AWS_REGION=ap-south-1
+AWS_BUCKET=newstrapi
