--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/plugin-color-picker": "^4.15.0",
     "@strapi/plugin-i18n": "4.15.0",
     "@strapi/plugin-users-permissions": "4.15.0",
+    "@strapi/provider-upload-aws-s3": "^4.15.0",
     "@strapi/strapi": "4.15.0",
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.3",
